# ServerEase

./: .gitignore  CMakeLists.txt  ReadMe.md
doc/: config.json_design_concept.md  configuration_directory_design_concept.md
include/: configuration.h  property.h.in  util.h
src/: configuration.cpp  property.cpp
src/win_ui/: App.xaml  App.xaml.cs  Library.cs  MainWindow.xaml  MainWindow.xaml.cs  ServerEase.csproj
src/win_ui/Language/: en.xaml  zh-CN.xaml  zh-TR.xaml
src/win_ui/SettingPage/: GeneralPage.xaml  GeneralPage.xaml.cs
test/: CMakeLists.txt
test/src/: main.cpp
win_ui/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ServerEase.csproj  ServerEase.sln  SettingWindow.xaml  SettingWindow.xaml.cs
win_ui/Language/: de.xaml  en.xaml  fr.xaml  ru.xaml  zh-CN.xaml
